--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+title: Setup Canon Printer - https://ij.start.canon
+description: Visit: ij.start.canon and enter your printer model number to download the software. Install on your device and follow the given steps.
+
 theme: jekyll-theme-cayman
